--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,173 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
+:root {
+  --primary-text-color: rgba(0, 0, 0, 1);
+  --secondary-text-color: rgba(85, 85, 85, 1);
+  --font-family: "Lato", sans-serif;
+
+  --primary-color: rgba(57, 189, 59, 1);
+  --secondary-color: rgba(142, 142, 142, 1);
+  --header-background-color: rgba(231, 243, 231, 1);
+
+  ---nav-font-size: 20px;
+  --primary-font-size: 16px;
+  --small-font-size: 12px;
+
+  --footer-light-text: rgba(35, 35, 35, 1);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  color: var(--primary-text-color);
+  font-family: var(--font-family);
+}
+
+/* Nav */
+
+.App-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 104px;
+  padding: 30px 80px 30px 80px;
+  color: var(--secondary-text-color);
+  background-color: var(--header-background-color);
+  font-size: var(---nav-font-size);
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.nav-links ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-links li {
+  margin: 0 10px;
+}
+
+.nav-link-item {
+  text-decoration: none;
+  color: inherit;
+  padding: 5px 10px;
+}
+
+.nav-link-item:focus {
+  border-bottom: 1px solid var(--primary-text-color);
+  color: var(--primary-text-color);
+  font-weight: 600;
+}
+
+.nav-cta {
+  display: flex;
+  align-items: start;
+  gap: 20px;
+}
+
+.nav-cta > :nth-child(1),
+.nav-cta > :nth-child(2),
+.nav-cta div span {
+  border-radius: 8px;
+  padding: 10px 12px 10px 12px;
+  min-width: 48px;
+  min-height: 44px;
+}
+
+.nav-cta > :nth-child(1),
+.nav-cta > :nth-child(2) {
+  color: var(--primary-text-color);
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.nav-cta div span {
+  display: flex;
+  align-items: center;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+/* Footer */
+.App-footer {
+  margin-top: auto;
+  border-top: 1px solid rgba(142, 142, 142, 1);
+  min-height: 364px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content {
+  display: flex;
+  gap: 128px;
+}
+
+.App-footer .footer-cta {
+  font-size: var(--primary-font-size);
+  color: var(--footer-light-text);
   text-align: center;
+  padding-top: 1rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App-footer .footer-cta p {
+  line-height: 2;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-footer .quick-link-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  min-width: 847px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.quick-link-sect {
+  flex: 1;
 }
 
-.card {
-  padding: 2em;
+.quick-link-sect header {
+  font-weight: 600;
+  font-size: var(---nav-font-size);
+  line-height: 2.8;
 }
 
-.read-the-docs {
-  color: #888;
+.quick-link-sect ul {
+  list-style: none;
+  padding: 0;
+}
+
+.quick-link-sect ul > li {
+  line-height: 2.4;
+}
+
+.quick-link-sect ul > li > a {
+  color: var(--footer-light-text);
+  font-size: var(--primary-font-size);
+  font-weight: 400;
+  text-decoration: none;
+}
+/* remember to add tag a when having fixed the html */
+
+.quicklink-item {
+  display: flex;
+  align-items: center; /* Aligns items vertically in the center */
+  text-decoration: none; /* Removes underline from the link */
+  color: inherit; /* Inherits text color */
+  /* gap: 8px; */
+}
+.quicklink-icon {
+  font-size: 2.3rem;
+  padding-right: 1rem;
+}
+
+.quick-link-sect ul li:nth-of-type(4) .quicklink-item .quicklink-icon {
+  font-size: 3.2rem;
 }
