--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-
-:root {
-  --primary-text-color: rgba(0, 0, 0, 1);
-  --secondary-text-color: rgba(85, 85, 85, 1);
-  --font-family: "Lato", sans-serif;
-
-  --primary-color: rgba(57, 189, 59, 1);
-  --secondary-color: rgba(142, 142, 142, 1);
-  --header-background-color: rgba(231, 243, 231, 1);
-
-  ---nav-font-size: 20px;
-  --primary-font-size: 16px;
-  --small-font-size: 12px;
-
-  --footer-light-text: rgba(35, 35, 35, 1);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -158,10 +140,9 @@
 
 .quicklink-item {
   display: flex;
-  align-items: center; /* Aligns items vertically in the center */
-  text-decoration: none; /* Removes underline from the link */
-  color: inherit; /* Inherits text color */
-  /* gap: 8px; */
+  align-items: start;
+  text-decoration: none;
+  color: inherit;
 }
 .quicklink-icon {
   font-size: 2.3rem;
