--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -127,9 +127,14 @@
 }
 
 .product-cta .cta-btn:first-child {
-  color: rgba(255, 255, 255, 1);
   background-color: var(--primary-color);
   border: none;
+  text-decoration: none;
+}
+
+.product-cta .cta-btn:first-child a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 1);
 }
 
 .product-cta .cta-btn:last-child {
