--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -14,7 +14,118 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   gap: 2rem;
   margin: 3rem 0;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 60rem;
+}
+
+.payment {
+  background-color: var(--product-item-bgc);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 18px;
+  padding: 30px 16px 30px 16px;
+  margin-bottom: 3rem;
+}
+
+.payment span {
+  line-height: 1.4;
+  font-weight: 600;
+  font-size: var(--nav-font-size);
+}
+
+.payment .custom-radio {
+  display: flex;
+  gap: 5px;
+}
+
+.payment .custom-radio input:active {
+  color: var(--footer-light-text);
+}
+
+.payment .radio-mark {
+  font-weight: 400;
+  font-weight: var(--primary-font-size);
+  color: var(--footer-light-text);
+}
+
+/* Form field */
+.form {
+  background-color: var(--product-item-bgc);
+  padding: 30px 16px 30px 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+fieldset {
+  border: none;
+  margin-bottom: 1rem;
+}
+
+.form-header {
+  font-weight: 700;
+  font-size: var(--nav-font-size);
+  line-height: 1.4;
+  padding: 0.5rem 0 1.2rem 0;
+}
+
+legend {
+  font-weight: 500;
+  font-size: var(--primary-font-size);
+  line-height: 1;
+  color: var(--footer-light-text);
+  margin-bottom: 0.5rem;
+}
+
+input[type="text"],
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  gap: 10px;
+  height: 52px;
+  box-sizing: border-box;
+  border: 1px solid rgba(192, 192, 192, 1);
+  border-radius: 8px;
+  background-color: transparent;
+}
+
+input::placeholder {
+  font-family: var(--font-family);
+  color: rgba(192, 192, 192, 1);
+  line-height: 2;
+}
+
+.card-details {
+  display: flex;
+  gap: 1.2rem;
+}
+
+.card-details .card-number {
+  flex: 3;
+}
+
+.card-details .expiry-date,
+.card-details .cvv {
+  flex: 1;
+}
+
+button {
+  width: 100%;
+  right: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  height: 48px;
+  margin-top: 0.5rem;
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
