done with product responsiveness, onto avbar

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,10 @@
   font-family: var(--font-family);
 }
 
-.App-body {
+/* .App-body {
   margin: 0 auto;
   max-width: 100%;
-}
+} */
 
 /* Nav */
 
