--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -69,7 +69,6 @@
 }
 
 .product-item {
-  background-color: var(--product-item-bgc);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -178,7 +177,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 680px) {
   .product-listings {
     grid-template-columns: 1fr;
     gap: 15px;
@@ -186,13 +185,21 @@
     justify-content: center;
   }
 
-  .product-item {
-    margin: 0 5px;
-  }
-
   .product-img {
     width: 100%;
-    height: auto;
-    padding: 0;
+    min-height: 154px;
+    padding: 50px;
+  }
+
+  .product-img img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .product-sect section header {
+    text-align: left;
+    font-size: 24px;
+    padding-left: 0;
+    margin-left: 0;
   }
 }
