--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -203,3 +203,9 @@
     margin-left: 0;
   }
 }
+
+@media screen and (max-width: 420px) {
+  .product-sect section header {
+    font-size: 20px;
+  }
+}
