--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,10 @@
   border: 1px solid var(--primary-color);
 }
 
+.cart-cta {
+  position: relative;
+}
+
 /* Footer */
 .App-footer {
   margin-top: auto;
@@ -165,15 +169,29 @@
 /* Responsive styles */
 @media screen and (max-width: 960px) {
   .App-nav {
-    flex-direction: column;
-    align-items: flex-start;
     padding: 20px;
+  }
+
+  .hamburger {
+    display: block;
+    display: flex;
+    gap: 10px;
+  }
+
+  .hamburger .cart-cta,
+  .hamburger .menu-cta {
+    font-size: 34px;
+    color: rgba(0, 0, 0, 1);
   }
 
   .nav-links {
     display: none;
     width: 100%;
     flex-direction: column;
+  }
+
+  .nav-links.active {
+    display: flex;
   }
 
   .nav-links ul {
@@ -184,21 +202,11 @@
   .nav-links li {
     width: 100%;
     text-align: left;
+    margin-left: 0;
   }
 
   .nav-cta {
-    margin-top: 10px;
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  .hamburger {
-    display: block;
-    cursor: pointer;
-  }
-
-  .nav-links.active {
-    display: flex;
+    display: none;
   }
 
   .App-footer {
