--- a/src/App.css
+++ b/src/App.css
@@ -177,9 +177,10 @@
   }
 
   .hamburger {
-    display: block;
     display: flex;
+    align-items: center;
     gap: 10px;
+    position: relative;
   }
 
   .hamburger .cart-cta,
@@ -188,25 +189,47 @@
     color: rgba(0, 0, 0, 1);
   }
 
+  .hamburger .cart-cta {
+    background-color: rgba(255, 255, 255, 1);
+    padding: 10px 12px;
+    border-radius: 8px;
+  }
+
   .nav-links {
     display: none;
     width: 100%;
     flex-direction: column;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: max-content;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 1000;
+    transform: translateY(-20px);
+    transition: all 0.3s ease;
+    opacity: 0;
   }
 
   .nav-links.active {
     display: flex;
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  .nav-link-item:focus {
+    border-bottom: transparent;
   }
 
   .nav-links ul {
     flex-direction: column;
-    width: 100%;
+    width: max-content;
   }
 
   .nav-links li {
-    width: 100%;
+    width: max-content;
     text-align: left;
-    margin-left: 0;
   }
 
   .nav-cta {
