--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,6 +3,7 @@
   --font-family: "Lato", sans-serif;
   --font-weight-600: 600;
   --font-weight-500: 500;
+  --font-weight-400: 400;
 }
 
 .header {
@@ -82,4 +83,52 @@
 
   border: 1px solid rgba(8, 172, 10, 1);
   border-radius: 10px;
+}
+
+/* carousel */
+.category-carousel {
+  width: 100%;
+  margin: auto;
+  margin-left: 1.5rem;
+  margin-top: 3.5rem;
+  padding: 20px;
+}
+
+.category-carousel .swiper {
+  width: 100%;
+}
+
+.category-carousel .swiper .swiper-wrapper {
+  display: flex;
+  gap: 20px;
+  margin-top: 1.5rem;
+}
+
+.category-carousel .swiper-slide {
+  min-width: 305px;
+  width: 100%;
+  height: 449px;
+  border-radius: 8px;
+  padding: 10px 12px;
+  background-color: rgba(237, 237, 237, 1);
+}
+
+.category-carousel h1 {
+  font-weight: var(--font-weight-500);
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 1);
+}
+
+.category-carousel .swiper-slide .text {
+  margin-bottom: 1rem;
+}
+
+.category-carousel .swiper-slide p {
+  font-weight: var(--font-weight-400);
+  font-size: 16px;
+  line-height: 19.2px;
+  letter-spacing: 0%;
+  color: rgba(142, 142, 142, 1);
 }
