--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -113,7 +113,8 @@
   background-color: rgba(237, 237, 237, 1);
 }
 
-.category-carousel h1 {
+.category-carousel h1,
+.best-deals h1 {
   font-weight: var(--font-weight-500);
   font-size: 22px;
   line-height: 32px;
@@ -131,4 +132,49 @@
   line-height: 19.2px;
   letter-spacing: 0%;
   color: rgba(142, 142, 142, 1);
+}
+
+/* Best deals, some heading styles in carousel */
+/* Add padding around the Best Deals section */
+.best-deals {
+  /* padding: 2rem 5%; */
+  /* Adjust padding based on screen size */
+}
+
+/* Make the product listings responsive */
+.best-deals .product-listings {
+  display: grid;
+  /* grid-template-columns: repeat(
+    auto-fit,
+    minmax(400px, 1fr)
+  ); Adjust columns */
+  /* gap: /px; */
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  justify-content: center;
+}
+
+/* Adjust the product image */
+.best-deals .product-listings .product-img {
+  max-width: 100%;
+  background-color: rgba(237, 237, 237, 1);
+  min-height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin: 0 auto; */
+  /* padding: 10px; */
+  border-radius: 10px;
+  width: 414px;
+  gap: 15px;
+}
+
+.best-deals .product-listings .product-img img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.product-deets,
+.product-cta {
+  all: unset;
 }
