--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -85,8 +85,20 @@
   border-radius: 10px;
 }
 
+/* Header texts */
+.header-text {
+  padding-left: 1.2rem;
+  font-weight: var(--font-weight-500);
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 1);
+  margin-bottom: 1.5rem;
+}
+
 /* carousel */
-.category-carousel {
+.category-carousel,
+.best-deals {
   width: 100%;
   margin: auto;
   margin-left: 1.5rem;
@@ -101,20 +113,22 @@
 .category-carousel .swiper .swiper-wrapper {
   display: flex;
   gap: 20px;
-  margin-top: 1.5rem;
 }
 
 .category-carousel .swiper-slide {
   min-width: 305px;
   width: 100%;
-  height: 449px;
+  height: 400px;
   border-radius: 8px;
   padding: 10px 12px;
   background-color: rgba(237, 237, 237, 1);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.category-carousel h1,
-.best-deals h1 {
+.category-carousel .text h1 {
   font-weight: var(--font-weight-500);
   font-size: 22px;
   line-height: 32px;
@@ -123,6 +137,7 @@
 }
 
 .category-carousel .swiper-slide .text {
+  align-self: start;
   margin-bottom: 1rem;
 }
 
@@ -134,47 +149,28 @@
   color: rgba(142, 142, 142, 1);
 }
 
-/* Best deals, some heading styles in carousel */
-/* Add padding around the Best Deals section */
-.best-deals {
-  /* padding: 2rem 5%; */
-  /* Adjust padding based on screen size */
+.category-carousel .swiper-slide .image-wrapper {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.category-carousel .swiper-slide img {
+  width: 65%;
+  height: auto;
+  object-fit: contain;
+  display: block;
 }
 
 /* Make the product listings responsive */
+
 .best-deals .product-listings {
-  display: grid;
-  /* grid-template-columns: repeat(
-    auto-fit,
-    minmax(400px, 1fr)
-  ); Adjust columns */
-  /* gap: /px; */
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  justify-content: center;
+  display: flex;
+  align-items: center;
 }
 
 /* Adjust the product image */
 .best-deals .product-listings .product-img {
-  max-width: 100%;
-  background-color: rgba(237, 237, 237, 1);
-  min-height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* margin: 0 auto; */
-  /* padding: 10px; */
-  border-radius: 10px;
-  width: 414px;
-  gap: 15px;
-}
-
-.best-deals .product-listings .product-img img {
-  max-width: 100%;
-  height: auto;
-  object-fit: contain;
-}
-
-.product-deets,
-.product-cta {
-  all: unset;
+  background-color: rgba(243, 243, 243, 1);
 }
