--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -98,7 +98,7 @@
 
 /* carousel */
 .category-carousel {
-  margin: 0 auto;
+  margin: 3rem auto 0;
   padding-left: 20px;
 }
 
@@ -225,4 +225,174 @@ section.reach-out form .form-group.message textarea::placeholder {
 }
 section.reach-out form .form-group.message textarea {
   padding: 10px;
+}
+
+/* Shop Now */
+section.shop-now {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 85px;
+  margin: 4pc;
+}
+
+.shop-now .center-piece {
+  text-align: center;
+}
+
+.shop-now .center-piece h1 {
+  font-family: Lato;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.shop-now .center-piece p {
+  font-family: Lato;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0%;
+  text-align: center;
+
+  padding: 15px 0px 40px;
+}
+
+/* Responsiveness */
+@media screen and (max-width: 1240px) {
+  .category-carousel .header-text {
+    margin-top: 30px;
+    /* margin-left: 0px; */
+  }
+
+  .header-text {
+    margin-left: 1rem;
+  }
+  /* .best-deals .product-deets {
+    font-size: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  } */
+
+  section.best-deals .product-listings,
+  section.top-picks .product-listings {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    grid-auto-flow: dense;
+  }
+
+  .best-deals .product-deets .product-price,
+  .top-picks .product-deets .product-price {
+    align-self: start;
+  }
+
+  /* .best-deals .product-cta {
+    display: flex;
+    flex-direction: column;
+  } */
+}
+
+@media screen and (max-width: 960px) {
+  .header .texts {
+    margin: 0 20px;
+  }
+
+  section.best-deals .product-listings,
+  section.top-picks .product-listings {
+    padding: 0px 20px;
+  }
+
+  section.reach-out form {
+    margin: 0 20px;
+  }
+
+  section.shop-now {
+    gap: 20px;
+    margin: 2pc;
+    margin-top: 3rem;
+  }
+
+  section.shop-now img {
+    width: 30%;
+    height: auto;
+  }
+
+  .shop-now .center-piece h1 {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .shop-now .center-piece p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .header .texts {
+    padding: 0 20px;
+  }
+
+  .header .texts .txt .main-text {
+    font-size: 36px;
+    line-height: 43.2px;
+  }
+
+  .header .texts .txt .sub-text,
+  .header .texts .cta-buttons button {
+    font-size: 16px;
+    line-height: 22px;
+  }
+
+  .header .texts .cta-buttons {
+    flex-direction: column;
+    gap: 15px;
+    width: 80%;
+  }
+
+  .header .header-img {
+    width: 80%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .header .texts .txt {
+    padding: 0 20px;
+  }
+
+  section.best-deals .product-listings,
+  section.top-picks .product-listings {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+    grid-auto-flow: dense;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .shop-now {
+    display: flex;
+    flex-direction: column;
+  }
+  section.shop-now img:last-child {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .category-carousel .swiper-slide {
+    min-width: 50%;
+    height: auto;
+  }
+
+  .category-carousel .swiper-slide img {
+    width: 100%;
+    height: auto;
+  }
 }
